<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/Photo"
        android:layout_width="123dp"
        android:layout_height="151dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:focusable="false" />

    <TextView
        android:id="@+id/ItermName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="35dp"
        android:text="@string/Name" />

    <TextView
        android:id="@+id/ItermGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ItermName"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/Gender" />

    <TextView
        android:id="@+id/ItermNation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ItermGender"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/Nation" />

    <TextView
        android:id="@+id/ItermBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ItermNation"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/Birth" />

    <TextView
        android:id="@+id/ItermIssue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ItermBirth"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="10dp"
        android:text="@string/Issue" />

    <TextView
        android:id="@+id/ItermIDNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ItermIssue"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/IDNo" />

    <TextView
        android:id="@+id/ItermDayStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ItermIDNo"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/DayStart" />

    <TextView
        android:id="@+id/ItermDayEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ItermDayStart"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/DayEnd" />

    <TextView
        android:id="@+id/ItermAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ItermDayEnd"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/Address" />

    <TextView
        android:id="@+id/ItermCurrAddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ItermAddress"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/CurrAddr" />


    <Button
        android:id="@+id/scan_single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/scan_single" />

    <Button
        android:id="@+id/scan_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:text="@string/scan_more" />

</RelativeLayout>